created login form and logging method.

--- a/FeedbackApp V4.0/App.config
+++ b/FeedbackApp V4.0/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="FeedbackApp_V4._0.Properties.Settings.FeedbackConnectionString"
+            connectionString="Data Source=DESKTOP-G7JAGNS\SQLEXPRESS;Initial Catalog=Feedback;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
     </startup>
