--- a/FeedbackApp V4.0/FeedbackApp V4.0.csproj
+++ b/FeedbackApp V4.0/FeedbackApp V4.0.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,9 @@
     </Compile>
     <Compile Include="CreateNewUser.Designer.cs">
       <DependentUpon>CreateNewUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FeedbackDataSet.cs">
+      <DependentUpon>FeedbackDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="FeedbackDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
